--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,73 +1,41 @@
 ---
-title: "Structured"
+title: "Overview"
 description: "Introducing maxBTC, the first liquid, scalable BTC-denominated yield asset"
 ---
 
 # Introduction
 
-Structured is shaping a new standard for Bitcoin yield by transforming BTC from a static store of value into a dynamic, liquid asset that generates sustainable returns and unlocks broader financial utility. Leveraging deep expertise from leading liquid staking protocols and institutional staking providers, Structured builds on proven DeFi infrastructure to create scalable, transparent, and composable yield solutions that are designed specifically for Bitcoin's unique characteristics and structural realities.
+Structured is shaping a new standard for Bitcoin yield, turning BTC from a static store of value into a liquid asset that generates sustainable returns and unlocks broader financial utility. maxBTC represents a transparent and composable yield format for Bitcoin, designed to preserve BTC exposure while expanding its role in DeFi.
 
-## Mission
+## **Mission**
 
-**Structured's mission is to unlock real BTC yield that's scalable, composable, and liquid by design.** We build native yield formats that solve liquidity and complexity challenges, making real yield on Bitcoin scalable, accessible, and ready to build on.
+**Structured's mission is to deliver real BTC yield that is scalable, composable and liquid by design.** We build yield formats that solve liquidity and complexity challenges, making real yield on Bitcoin accessible and ready to integrate.
 
-## Vision
+## **Vision**
 
-**Structured envisions a future where Bitcoin evolves from a store of value into a liquid, trusted asset that powers a transparent and scalable financial ecosystem.** Where real Bitcoin yield unlocks new opportunities for builders and investors – fueling growth that's secure, sustainable, and designed for the long term.
+**Structured envisions Bitcoin evolving from a store of value into a trusted asset that powers an open and scalable financial system.** Real BTC yield enables builders and investors to expand what Bitcoin can do, creating growth that is sustainable and built for the long term.
 
-## The problem
+# **Introducing maxBTC**
 
-Despite Bitcoin's dominant role as a digital store of value, much of it still sits idle. Today's BTC DeFi landscape faces key limitations that keep Bitcoin from being a liquid, composable, yield-generating asset.
+maxBTC is liquid, yield-bearing Bitcoin that offers sustainable returns to its holders through proven BTC-denominated strategies.
 
-<div className="text-sm">
-The current BTC DeFi landscape presents three critical limitations:
-</div>
-
-<CardGroup cols={3}>
-  <Card title="No real yield" icon="ticket" iconType="duotone">
-    <div className="text-sm">BTC LRTs mostly offer unsustainable points-based rewards, not real BTC returns. Staking yields have dropped from 8% to about 2%, and points campaigns are ending.</div>
-  </Card>
-  
-  <Card title="Illiquidity" icon="lock" iconType="duotone">
-    <div className="text-sm">BTC vaults and hedge funds lock capital with unpredictable entry and exit windows and costly withdrawals, limiting DeFi usability.</div>
-  </Card>
-  
-  <Card title="Lack of scalability" icon="chart-network" iconType="duotone">
-    <div className="text-sm">BTC vaults seldom exceed 1,000 BTC and lack composability within DeFi, constraining their growth and integration potential.</div>
-  </Card>
-</CardGroup>
-
-## Introducing maxBTC
-
-maxBTC is a synthetic, liquid, yield-bearing BTC asset designed to generate real BTC-denominated yield from diversified, proven DeFi strategies. Developed by Structured, maxBTC is optimized for seamless integration with decentralized exchanges, lending protocols, and yield-splitting platforms while preserving fully transparent BTC exposure that compounds rewards over time.
+Built for composability, its LST-like structure makes it compatible with existing DeFi integrations and effective as collateral in lending markets. It lets holders deploy capital without losing BTC exposure, improve capital efficiency, and scale with multiple underlying strategies over time.
 
 <CardGroup cols={3}>
   <Card title="Real yield on Bitcoin" icon="bitcoin" iconType="duotone">
-    <div className="text-sm">High BTC yield derived from programmatic, open-source strategies. Transparent strategy mechanics and risk metrics ensure security and clarity.</div>
+    Attractive BTC-denominated yield from tested strategies, not emissions. Transparent mechanics and risk metrics ensure clarity and trust.
   </Card>
 
   <Card title="Liquid and composable" icon="droplet" iconType="duotone">
-    <div className="text-sm">Tokenized for instant liquidity – withdraw anytime or trade on DEXs with deep spot liquidity. Fully composable for use as collateral or in DeFi protocols.</div>
+    Redeemable or tradable on DEXs with minimal slippage. LST-like form factor integrates with lending markets and DeFi protocols as effective collateral.
   </Card>
     
   <Card title="Infinitely scalable" icon="chart-line-up" iconType="duotone">
-    <div className="text-sm">Designed to expand across multiple strategies and chains, enabling unlimited capacity growth without dilution.</div>
+    A single minting format unifies liquidity across strategies and chains, enabling scale without fragmentation or manual capital rotation.
   </Card>
 </CardGroup>
 
-### Where does the yield come from?
-
-maxBTC's flagship yield strategy generates real BTC-denominated returns through a CeDeFi approach that combines DeFi liquidity provision with centralized exchange hedging. The strategy provides liquidity to Jupiter's perpetual market pools while maintaining BTC exposure through hedged positions on centralized exchanges.
-
-Unlike points-based rewards, this yield comes from actual trading fees collected from the DEX liquidity pools. The strategy maintains directional exposure to BTC while capturing sustainable yield from perpetual market fees through this structured liquidity provision model.
-
-<Card title="Learn about the strategy" icon="chart-line" href="/strategy/overview">
-  Explore the complete JLP BTC Neutral strategy workflow, technical implementation, and yield sources
+<Card title="Next: Horizontal scaling" href="/overview/horizontal_scaling">
+How maxBTC achieves scalability without fragmenting liquidity.
 </Card>
-
-## About Structured
-
-Structured is founded by industry veterans with deep experience at Lido (Ethereum's leading liquid staking provider), Drop (the largest liquid staking provider for interchain assets), and P2P (a top institutional staking provider and incubator of Lido). This background gives Structured unparalleled insight into making crypto assets liquid, secure, and impactful within open financial ecosystems.
-
-Building on this foundation, Structured delivers solutions that make real Bitcoin yield scalable, accessible, and ready to power the next generation of decentralized financial infrastructure. In a space often focused on short-term campaigns and incentives, Structured is committed to enabling long-term, sustainable growth for BTCFi.
 
