updated multipliers section

--- a/overview/points.mdx
+++ b/overview/points.mdx
@@ -40,17 +40,9 @@ As activity grows, points accumulate into tiers. These tiers reflect long-term e
 
 All points and rankings are visible to participants. A leaderboard highlights top contributors, while individual dashboards track balances and tier status.
 
-## **Current multipliers**
+## **Multipliers**
 
-| **Strategy** | **Multiplier** |
-| --- | --- |
-| Minting Vault shares | 1× |
-| maxBTC on Neutron (not in DeFi protocols) | 1× |
-| LP Vault shares | 10× |
-| maxBTC/WBTC supervault | 10× |
-| maxBTC as collateral on Amber | 3× |
-| maxBTC/USDC supervault | 25× |
-
+Multipliers vary by strategy and integration. For example, using maxBTC as collateral, providing liquidity in Supervaults, or holding specific LP tokens can earn higher points.
 <Note>
 *Track your points and ranking at [points.structured.money](https://points.structured.money/)*
 </Note>
